# ormas-ci

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  FUTURE_DEVELOPMENT.md  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  bench_qdk_quantum.py  bench_sf_ormas.py  bench_sf_qdk.py  bench_vs_pyscf.py
benchmarks/results/: latest.json  quantum_latest.json
docs/: conf.py  index.md
docs/api/: internals.md  public_api.md
docs/architecture/: bitstrings.md  data_flow.md  determinant_enumeration.md  integrals.md  overview.md  phase_factors.md
docs/design/: future.md  performance.md  pyscf_differences.md  pyscf_integration.md  qdk_integration.md  sf_ormas_design.md  subspace_model.md
docs/developer_guide/: architecture_overview.md  code_style.md  contributing.md  debugging.md  extending.md  release_process.md  testing.md
docs/guides/: choosing_subspaces.md  getting_started.md  recipes.md  sf_recipes.md
docs/integration/: forte_comparison.md  pyscf_casci.md  qdk_chemistry.md  sf_qdk.md
docs/theory/: casci.md  comparison.md  gas.md  ormas.md  quantum_computing.md  rasci.md  slater_condon.md  spinflip.md
docs/user_guide/: configuration_reference.md  faq.md  installation.md  interpreting_results.md  migration.md  (+1 more)
examples/: 01_basic_ormas.py  02_rasci.py  03_casscf_optimization.py  04_convergence_study.py  05_qdk_pipeline.py  06_qdk_quantum_simulation.py  07_sf_h2_dissociation.py  08_sf_ethylene.py  09_sf_trimethylmethylene.py  README.md
notebooks/: 01_basic_usage.ipynb  02_rasci_vs_casci.ipynb  03_ormas_transition_metal.ipynb  04_qdk_chemistry_integration.ipynb  05_quantum_resource_estimation.ipynb  06_spinflip_ormas.ipynb
ormas_ci/: __init__.py
tests/: conftest.py  test_completeness.py  test_coverage.py  test_determinants.py  test_edge_cases.py  test_fcisolver.py  test_hamiltonian.py  test_molecules.py  test_pyscf_compat.py  test_qdk_integration.py  test_qdk_quantum_benchmarks.py  test_rdm.py  test_rdm_advanced.py  test_sci_integration.py  test_sf_integration.py  test_sf_qdk.py  test_sf_validation.py  test_sigma.py  test_slater_condon.py  test_solver.py  test_spinflip.py  test_subspaces.py  test_utils.py  test_validation.py
(+21 files in other folders)
