[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscf-ormas-ci"
version = "0.3.0"
description = "ORMAS-CI and RASCI solver as a PySCF fcisolver plugin with matrix-free SCI integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Bryce M. Westheimer", email = "brycewestheimer@gmail.com"},
]
keywords = [
    "quantum chemistry",
    "ORMAS",
    "RASCI",
    "configuration interaction",
    "PySCF",
    "quantum computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyscf>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "build>=1.0",
    "pyright>=1.1",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
]
qdk = [
    "qdk-chemistry>=1.0.0",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/brycewestheimer/ormas-ci"
Repository = "https://github.com/brycewestheimer/ormas-ci"
Issues = "https://github.com/brycewestheimer/ormas-ci/issues"

[tool.setuptools.packages.find]
include = ["pyscf*", "ormas_ci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["pyscf/ormas_ci"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["pyscf/ormas_ci"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
